tests/react_16_9/react_16_9.exp
Error ------------------------------------------------------------------------------------------------- profiler.js:5:26

Cannot get `React.ProfilerOnRenderFnType` because property `ProfilerOnRenderFnType` is missing in module `react` [1].
[prop-missing]

   profiler.js:5:26
     5| const onRenderBad: React.ProfilerOnRenderFnType = ( // Error, the type isnt exported
                                 ^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:284:16
   284| declare module react {
                       ^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ profiler.js:17:13

Cannot create `React.Profiler` element because property `id` is missing in props [1] but exists in props of
component [2]. [prop-missing]

   profiler.js:17:13
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                    ^^^^^^^^^^^^^^

References:
   profiler.js:17:12
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                   ^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:804:38
                                             v
   804|     declare const Profiler: component(
   805|       children?: React$Node,
   806|       id: string,
   807|       onRender: ProfilerOnRenderFnType,
   808|     );
            ^ [2]


Error ------------------------------------------------------------------------------------------------ profiler.js:17:13

Cannot create `React.Profiler` element because property `onRender` is missing in props [1] but exists in props of
component [2]. [prop-missing]

   profiler.js:17:13
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                    ^^^^^^^^^^^^^^

References:
   profiler.js:17:12
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                   ^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:804:38
                                             v
   804|     declare const Profiler: component(
   805|       children?: React$Node,
   806|       id: string,
   807|       onRender: ProfilerOnRenderFnType,
   808|     );
            ^ [2]



Found 3 errors
